--- a/index.html
+++ b/index.html
@@ -323,14 +323,9 @@
 
     function copyToClipboard(text, button) {
         navigator.clipboard.writeText(text).then(() => {
-            const originalText = button.textContent;
             button.textContent = 'Copied!';
             button.classList.add('copied');
-
-            setTimeout(() => {
-                button.textContent = originalText;
-                button.classList.remove('copied');
-            }, 2000);
+            // Removed the setTimeout - button stays as "Copied!" now
         }).catch(err => {
             console.error('Failed to copy:', err);
         });
@@ -354,7 +349,7 @@
         }
 
         const uuidList = document.getElementById('uuidList');
-        uuidList.innerHTML = '';
+        uuidList.innerHTML = ''; // This already resets everything when regenerating
 
         for (let i = 0; i < amount; i++) {
             const uuid = generateUUIDv7(customTimestamp);
@@ -379,7 +374,7 @@
 
             const copyButton = document.createElement('button');
             copyButton.className = 'btn-copy';
-            copyButton.textContent = 'Copy';
+            copyButton.textContent = 'Copy'; // Always starts fresh as "Copy"
             copyButton.onclick = () => copyToClipboard(uuid, copyButton);
 
             uuidItem.appendChild(uuidContent);
